// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Legend /> deve renderizar corretamente uma legenda do tipo "circle" 1`] = `
<div>
  <div
    class="sc-AxhUy gWaiz"
  >
    <div
      class="sc-AxheI jCCqEc"
      color="#000000"
    />
    <div
      class="sc-AxirZ fvzfAf"
    >
      <span
        class="sc-AxiKw boVvlH"
      >
        Casos
      </span>
      <span
        class="sc-AxjAm sc-AxhCb JcUDR"
      >
        10
      </span>
    </div>
  </div>
</div>
`;

exports[`<Legend /> deve renderizar corretamente uma legenda do tipo "line" 1`] = `
<div>
  <div
    class="sc-AxhUy gWaiz"
  >
    <div
      class="sc-AxgMl gtSLvA"
      color="#000000"
    />
    <div
      class="sc-AxirZ fvzfAf"
    >
      <span
        class="sc-AxiKw boVvlH"
      >
        Casos
      </span>
      <span
        class="sc-AxjAm sc-AxhCb JcUDR"
      >
        10
      </span>
    </div>
  </div>
</div>
`;
